tyk/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-lvlds-io
  namespace: kube-tyk
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - api.lvlds.io
    secretName: api-lvlds-io-tls
  rules:
  - host: api.lvlds.io
    http:
      paths:
      - path: /
        backend: 
          serviceName: tyk-dashboard
          servicePort: 80
      - path: /gateway
        backend:
          serviceName: tyk-gateway
          servicePort: 80
